--- a/data-checker-2015-ios-2.0/Base.lproj/Main.storyboard
+++ b/data-checker-2015-ios-2.0/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7519.1" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7513.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Red 1 missing" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxs-eG-BeU">
-                                <rect key="frame" x="16" y="58" width="568" height="534"/>
+                                <rect key="frame" x="16" y="102" width="568" height="490"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -32,15 +32,27 @@
                                     <action selector="missingChangePacketsTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Q3d-iL-xMT"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zgf-ua-ZoW">
+                                <rect key="frame" x="183" y="58" width="235" height="30"/>
+                                <state key="normal" title="Share Missing Change Packet List">
+                                    <color key="titleColor" red="0.41176470588235292" green="0.82745098039215681" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareMissingData" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7s7-EZ-nQ1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="el2-uA-uxH" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="LDT-Aq-N4p"/>
                             <constraint firstItem="hxs-eG-BeU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="SeQ-VI-jP1"/>
+                            <constraint firstItem="Zgf-ua-ZoW" firstAttribute="centerX" secondItem="el2-uA-uxH" secondAttribute="centerX" constant="0.5" id="ZVB-mY-y2A"/>
                             <constraint firstAttribute="centerX" secondItem="el2-uA-uxH" secondAttribute="centerX" id="deB-Sw-jS0"/>
-                            <constraint firstItem="hxs-eG-BeU" firstAttribute="top" secondItem="el2-uA-uxH" secondAttribute="bottom" constant="8" id="eHz-PD-day"/>
+                            <constraint firstItem="Zgf-ua-ZoW" firstAttribute="top" secondItem="el2-uA-uxH" secondAttribute="bottom" constant="8" id="ieY-Ul-9jF"/>
                             <constraint firstItem="hxs-eG-BeU" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="mEn-5U-pwM"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="hxs-eG-BeU" secondAttribute="bottom" constant="8" id="tMT-PN-R6F"/>
+                            <constraint firstItem="hxs-eG-BeU" firstAttribute="top" secondItem="Zgf-ua-ZoW" secondAttribute="bottom" constant="14" id="xzQ-lg-hyR"/>
                         </constraints>
                     </view>
                     <connections>
