--- a/data-checker-2015-ios-2.0/Base.lproj/Main.storyboard
+++ b/data-checker-2015-ios-2.0/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7519.1" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7513.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Red 1 missing" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxs-eG-BeU">
-                                <rect key="frame" x="16" y="102" width="568" height="490"/>
+                                <rect key="frame" x="16" y="102" width="568" height="461"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -42,21 +42,40 @@
                                     <action selector="shareMissingData" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7s7-EZ-nQ1"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matches: None" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPC-6y-RAj">
+                                <rect key="frame" x="467" y="571" width="117" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Competition: None" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4a-i9-Hsl">
+                                <rect key="frame" x="16" y="571" width="145" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="HPC-6y-RAj" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="9x3-9a-0cd"/>
+                            <constraint firstItem="HPC-6y-RAj" firstAttribute="top" secondItem="hxs-eG-BeU" secondAttribute="bottom" constant="8" id="JVr-dS-zbZ"/>
                             <constraint firstItem="el2-uA-uxH" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="LDT-Aq-N4p"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="HPC-6y-RAj" secondAttribute="bottom" constant="8" id="OmT-tJ-FuS"/>
                             <constraint firstItem="hxs-eG-BeU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="SeQ-VI-jP1"/>
+                            <constraint firstItem="c4a-i9-Hsl" firstAttribute="top" secondItem="hxs-eG-BeU" secondAttribute="bottom" constant="8" id="TFu-Hc-Fs7"/>
                             <constraint firstItem="Zgf-ua-ZoW" firstAttribute="centerX" secondItem="el2-uA-uxH" secondAttribute="centerX" constant="0.5" id="ZVB-mY-y2A"/>
                             <constraint firstAttribute="centerX" secondItem="el2-uA-uxH" secondAttribute="centerX" id="deB-Sw-jS0"/>
                             <constraint firstItem="Zgf-ua-ZoW" firstAttribute="top" secondItem="el2-uA-uxH" secondAttribute="bottom" constant="8" id="ieY-Ul-9jF"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="c4a-i9-Hsl" secondAttribute="bottom" constant="8" id="kaA-OQ-F96"/>
+                            <constraint firstItem="c4a-i9-Hsl" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="lxH-8Y-Yyb"/>
                             <constraint firstItem="hxs-eG-BeU" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="mEn-5U-pwM"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="hxs-eG-BeU" secondAttribute="bottom" constant="8" id="tMT-PN-R6F"/>
                             <constraint firstItem="hxs-eG-BeU" firstAttribute="top" secondItem="Zgf-ua-ZoW" secondAttribute="bottom" constant="14" id="xzQ-lg-hyR"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="compDisplay" destination="c4a-i9-Hsl" id="Cgi-YZ-ymj"/>
                         <outlet property="display" destination="hxs-eG-BeU" id="dB7-yP-n3c"/>
+                        <outlet property="matchesDisplay" destination="HPC-6y-RAj" id="iTL-Ni-D7g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
